Rename time to created_at in AuditTrailEvent
